myBike-landing-trigger-and-align-fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -38,6 +38,7 @@
   &__call {
     position: relative;
     right: 30px;
+    top: 4px;
     display: inline-block;
     width: 18px;
     height: 18px;
@@ -50,6 +51,7 @@
     @include onSmallDesktop {
       width: 24px;
       height: 24px;
+      line-height: 24px;
       right: 40px;
     }
 
